@@ -24,7 +24,7 @@
 
 #define QJACKCTL_TITLE      "JACK Audio Connection Kit"
 #define QJACKCTL_SUBTITLE   "Qt GUI Interface"
-#define QJACKCTL_VERSION    "0.2.5.91"
+#define QJACKCTL_VERSION    "0.2.5.92"
 #define QJACKCTL_WEBSITE    "http://qjackctl.sourceforge.net"
 #define QJACKCTL_COPYRIGHT  "Copyright (C) 2003-2004, rncbc aka Rui Nuno Capela. All rights reserved."
 
